--- a/public/default/person/syh_person.html
+++ b/public/default/person/syh_person.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人中心</title>
     <link rel="stylesheet" href="../../src/css/person/syh_person.css">
+    <script src="../../../src/js/react.js"></script>
+    <script src="../../../src/js/react-dom.js"></script>
+    <script type='text/babel' src="../../../components/syh_person.jsx"></script>
+    <script src='../../../src/js/browser.min.js'></script>
 </head>
 <body>
     <div id="root"></div>
